--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Greek/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ThreeDemo/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
 
-    <script type="module" crossorigin src="/Greek/assets/index.0fdf7b6c.js"></script>
-    <link rel="modulepreload" href="/Greek/assets/three.43f9445a.js">
-    <link rel="stylesheet" href="/Greek/assets/index.5c431c36.css">
+    <script type="module" crossorigin src="/ThreeDemo/assets/index.e9f92c44.js"></script>
+    <link rel="modulepreload" href="/ThreeDemo/assets/three.38fd21b5.js">
+    <link rel="stylesheet" href="/ThreeDemo/assets/index.5c431c36.css">
   </head>
   <body>
     <canvas id="bg"></canvas>
